# -AgentGuardVS-CXX

./: .env.example  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  RELEASE_AUDIT.md  RELEASE_MANIFEST.md  SECURITY.md  vcpkg.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  provider_issue.yml  skill_plugin_issue.yml
.github/workflows/: examples.yml  library-demo.yml  windows-build.yml
action/agentguard-review/: action.yml
benchmarks/: README.md  tasks.jsonl
benchmarks/AgentGuardBench/: .gitignore  README.md
benchmarks/AgentGuardBench/configs/: project_config.json
benchmarks/AgentGuardBench/reports/: metrics.csv  project_inventory.json  project_inventory.md  summary.html  summary.md  task_inventory.md
benchmarks/AgentGuardBench/scripts/: prepare_all.bat  prepare_one.bat  report_all.bat  scan_project.bat  verify_all.bat
benchmarks/AgentGuardBench/tasks/T001_state_unit_count/: prompt_guarded.md  prompt_raw.md  task.json
benchmarks/AgentGuardBench/tasks/T002_summon_global_cooldown/: prompt_guarded.md  prompt_raw.md  task.json
benchmarks/AgentGuardBench/tasks/T003_insufficient_mana_error/: prompt_guarded.md  prompt_raw.md  task.json
benchmarks/AgentGuardBench/tasks/T004_mmr_closest_score/: prompt_guarded.md  prompt_raw.md  task.json
benchmarks/AgentGuardBench/tasks/T005_factory_invalid_mode/: prompt_guarded.md  prompt_raw.md  task.json
benchmarks/AgentGuardBench/tasks/T006_tick_dt_clamp/: prompt_raw.md  (+2 more)
benchmarks/AgentGuardBench/tests/: test_reports_pipeline.py  test_scan_project.py  test_tools_pipeline.py
benchmarks/AgentGuardBench/tools/: benchlib.py  build_vs.py  check_scope.py  classify_failure.py  generate_readme.py  generate_report.py  prepare_run.py  scan_project.py  semantic_check.py  verify_all.py  verify_run.py
docs/: ARCHITECTURE.md  DEVELOPMENT_RULES.md  ERROR_TAXONOMY.md  GENERALIZATION_PHASE1.md  GITHUB_ACTION.md  INSTALL.md  LIMITATIONS.md  PLUGIN_INSTALL.md  PROJECT_BRIEF.md  RELEASE.md  RELEASE_PACKAGE.md  ROADMAP.md  SECURITY_MODEL.md  TASK_SPEC.md
docs/evaluation/blackbox-agent-test-v1/: README.md  metric-formulas.md  raw-test-results.md  results.csv  tasks.md
docs/superpowers/plans/: 2026-05-25-agentguard-generalization-phase1.md
examples/: run-library-demo.ps1
examples/library-system/: Library.sln  README.md
examples/library-system/LibraryApp/: Book.h  LibraryApp.vcxproj  LibrarySystem.cpp  LibrarySystem.h  LibraryTests.cpp  LibraryTests.h  main.cpp
examples/reports/: sample-report.md  sample-semantic-review.json  sample-semantic-scope.json
examples/tasks/: add-borrow-limit-check.md  add-case-insensitive-title-search.md  fix-return-stock-count.md
plugins/agentguard-vs-cxx/.codex-plugin/: plugin.json
plugins/agentguard-vs-cxx/assets/: README.md
scripts/: bootstrap.ps1  doctor.ps1  export_metrics.py  install-plugin.ps1  install-skill.ps1  install.ps1  make-release-tree.ps1  package-release.ps1  preflight-release.ps1  run-benchmarks.ps1  setup-env.example.ps1  summarize_results.py  uninstall.ps1
skills/agentguard-vs-cxx/: SKILL.md
skills/agentguard-vs-cxx/references/: troubleshooting.md
skills/agentguard-vs-cxx/scripts/: find-agentguard.ps1  run-analyze.ps1  run-full-cycle.ps1  run-review.ps1  run-verify.ps1
src/: main.cpp
src/agents/: BuildFixerAgent.cpp  BuildFixerAgent.h  ImplementerAgent.cpp  ImplementerAgent.h  PlannerAgent.cpp  PlannerAgent.h  RepairLoop.cpp  RepairLoop.h  ReviewerAgent.cpp  ReviewerAgent.h  SemanticAnalyzerAgent.cpp  SemanticAnalyzerAgent.h
src/core/: Models.cpp  Models.h  PathUtils.cpp  PathUtils.h  ProcessRunner.cpp  ProcessRunner.h  SemanticModels.cpp  SemanticModels.h  TaskSpec.cpp  Workspace.cpp  Workspace.h
src/diagnostics/: ErrorClassifier.cpp  ErrorClassifier.h  ErrorParser.cpp  ErrorParser.h  RiskAnalyzer.cpp
src/evaluation/: BenchmarkTask.cpp  BenchmarkTask.h  Metrics.cpp  Metrics.h
src/indexing/: ContextSelector.cpp  ContextSelector.h  CppSymbolIndexer.cpp  CppSymbolIndexer.h  DependencyGraph.cpp  DependencyGraph.h  FileIndexer.cpp  FileIndexer.h  SymbolIndex.cpp  SymbolIndex.h
src/llm/: CachedLLMProvider.cpp  CachedLLMProvider.h  ClaudeProvider.cpp  ClaudeProvider.h  DeepSeekProvider.cpp  DeepSeekProvider.h  FakeLLMProvider.cpp  FakeLLMProvider.h  FileLLMProvider.cpp  FileLLMProvider.h  HttpJsonClient.cpp  HttpJsonClient.h  ILLMProvider.h  LLMProviderConfig.cpp  LLMProviderConfig.h  OpenAIProvider.cpp  OpenAIProvider.h
src/patching/: DiffReporter.cpp  DiffReporter.h  PatchApplier.cpp  PatchApplier.h  PatchPlan.cpp  PatchPlan.h
src/project/: CommandVerifier.cpp  CommandVerifier.h  ProjectProfile.cpp  ProjectProfile.h
src/report/: ReportWriter.cpp  ReportWriter.h
src/security/: SecurityPolicy.cpp  SecurityPolicy.h
src/vs/: MSBuildLocator.cpp  MSBuildLocator.h  MSBuildRunner.cpp  MSBuildRunner.h  SlnParser.cpp  SlnParser.h  VcxprojParser.cpp  VcxprojParser.h
tests/: CMakeLists.txt  test_build_fixer_agent.cpp  test_cli_agent_commands.cpp  test_cli_analyze.cpp  test_cli_review.cpp  test_cli_run.cpp  test_command_verifier.cpp  test_context_selector.cpp  test_cpp_symbol_indexer.cpp  test_dependency_graph.cpp  test_diff_reporter.cpp  test_error_parser.cpp  test_evaluation.cpp  test_file_indexer.cpp  test_implementer_agent.cpp  test_llm_cache.cpp  test_llm_provider.cpp  test_models.cpp  test_msbuild_locator.cpp  test_msbuild_runner.cpp  test_patch_applier.cpp  test_planner_agent.cpp  test_process_runner.cpp  test_project_profile.cpp  test_repair_loop.cpp  test_report_writer.cpp  test_security_policy.cpp  test_semantic_analyzer_agent.cpp  test_semantic_models.cpp  test_semantic_review_agent.cpp  test_sln_parser.cpp  test_vcxproj_parser.cpp  test_workspace.cpp
tests/fixtures/mini_vs_project/: Mini.sln
tests/fixtures/mini_vs_project/IndexingSample/Engine/: Battle.cc
tests/fixtures/mini_vs_project/IndexingSample/Game/: Summon.cpp
tests/fixtures/mini_vs_project/IndexingSample/World/: Arena.cxx
tests/fixtures/mini_vs_project/MiniGame/: MiniGame.vcxproj
(+24 files in other folders)
